Add linpĥone-config, tel and callto support for Linux and Mac. Format of linphone-config : `linphone-config:base64_address`

--- a/linphone-app/cmake_builder/linphone_package/macos/Info.plist.in
+++ b/linphone-app/cmake_builder/linphone_package/macos/Info.plist.in
@@ -43,6 +43,9 @@
 				<string>sip-linphone</string>
 				<string>sips</string>
 				<string>sips-linphone</string>
+				<string>tel</string>
+				<string>callto</string>
+				<string>linphone-config</string>
 			</array>
 		</dict>
 	</array>
