Add linphones-config for https and customer adaptation : `linphone-config=url <=> show config=url` (no base64 convertion for this scheme)

--- a/linphone-app/cmake_builder/linphone_package/macos/Info.plist.in
+++ b/linphone-app/cmake_builder/linphone_package/macos/Info.plist.in
@@ -46,6 +46,7 @@
 				<string>tel</string>
 				<string>callto</string>
 				<string>linphone-config</string>
+				<string>linphones-config</string>
 			</array>
 		</dict>
 	</array>
