- Add `tel` and `callto` protocols support for Linux and Mac

--- a/linphone-app/cmake_builder/linphone_package/macos/Info.plist.in
+++ b/linphone-app/cmake_builder/linphone_package/macos/Info.plist.in
@@ -43,6 +43,8 @@
 				<string>sip-linphone</string>
 				<string>sips</string>
 				<string>sips-linphone</string>
+				<string>tel</string>
+				<string>callto</string>
 			</array>
 		</dict>
 	</array>
