--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,9 +38,12 @@ endforeach()
 if(ENABLE_BUILD_VERBOSE)
 	message("User Args : ${USER_ARGS}")
 endif()
+
 if(NOT CMAKE_GENERATOR_PLATFORM AND WIN32)
-	set(CMAKE_GENERATOR_PLATFORM "Win32")
-	message(STATUS "Setting Platform to ${CMAKE_GENERATOR_PLATFORM}")
+	if(NOT ${CMAKE_GENERATOR} MATCHES "Ninja")
+		set(CMAKE_GENERATOR_PLATFORM "Win32")
+		message(STATUS "Setting Platform to ${CMAKE_GENERATOR_PLATFORM}")
+	endif()
 endif()
 
 project(linphoneqt)
