Add Artifacts on fail

--- a/.gitlab-ci-files/job-linux-desktop-centos7.yml
+++ b/.gitlab-ci-files/job-linux-desktop-centos7.yml
@@ -100,6 +100,7 @@ job-centos7-ninja-gcc-package:
   artifacts:
     paths:
       - build/OUTPUT/Packages/*.AppImage
+    when: always
     expire_in: 1 week
 
 #################################################
