--- a/.gitlab-ci-files/job-macosx-desktop.yml
+++ b/.gitlab-ci-files/job-macosx-desktop.yml
@@ -96,6 +96,7 @@ job-macosx-makefile-package:
     - codesign --options runtime,library --verbose -s "$MACOS_SIGNING_IDENTITY" OUTPUT/Packages/Linphone*.dmg
     - ./../tools/app_notarization.sh
   artifacts:
+    when: always
     paths:
       - build/OUTPUT/Packages/Linphone*.dmg
     expire_in: 1 week
