--- a/.gitlab-ci-files/job-windows-desktop.yml
+++ b/.gitlab-ci-files/job-windows-desktop.yml
@@ -25,6 +25,7 @@
   artifacts:
     paths:
       - build\OUTPUT
+    when: always
     expire_in: 2 days
     
 job-windows-vs2017:
@@ -81,6 +82,7 @@ job-windows-vs2017-package:
   artifacts:
     paths:
       - results\*
+    when: always
     expire_in: 1 weeks
  
  
