--- a/.gitlab-ci-files/job-linux-desktop.yml
+++ b/.gitlab-ci-files/job-linux-desktop.yml
@@ -13,7 +13,7 @@
   echo $CMAKE_SANITIZER_OPTIONS
   cd build
   cmake .. -G "$CMAKE_GENERATOR" -DCMAKE_VERBOSE_MAKEFILE=ON -DLINPHONESDK_PLATFORM=Desktop -DCMAKE_BUILD_TYPE=$CI_BUILD_TYPE $DEFAULT_LINUX_CMAKE_OPTIONS $CMAKE_OPTIONS $SCHEDULE_CMAKE_OPTIONS $CMAKE_SANITIZER_OPTIONS 
-  cmake --build . --target all --config $CI_BUILD_TYPE $LBC_NODEBUG_OPTIONS
+  cmake --build . --target install --config $CI_BUILD_TYPE $LBC_NODEBUG_OPTIONS
   
 .job-linux-desktop:
   stage: build
