--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,7 +135,10 @@ if(CMAKE_VERBOSE_MAKEFILE)
 		list(APPEND PROJECT_BUILD_COMMAND "--verbose")
 	endif()
 endif()
-
+if(UNIX AND NOT APPLE)
+	set(CMAKE_INSTALL_RPATH "$ORIGIN:$ORIGIN/lib64:$ORIGIN/../lib64:$ORIGIN/lib:$ORIGIN/../lib")
+	list(APPEND APP_OPTIONS "-DCMAKE_INSTALL_RPATH=${CMAKE_INSTALL_RPATH}")
+endif()
 ExternalProject_Add(sdk PREFIX "${CMAKE_BINARY_DIR}/sdk"
     SOURCE_DIR "${CMAKE_SOURCE_DIR}/linphone-sdk"
     INSTALL_DIR "${LINPHONE_OUTPUT_DIR}"
