--- a/.gitlab-ci-files/job-macosx-desktop.yml
+++ b/.gitlab-ci-files/job-macosx-desktop.yml
@@ -28,6 +28,7 @@
   artifacts:
     paths:
       - build/OUTPUT
+    when: always
     expire_in: 1 week
 
 #################################################
@@ -97,7 +98,8 @@ job-macosx-makefile-package:
     - ./../tools/app_notarization.sh
   artifacts:
     paths:
-      - build/OUTPUT/Packages/Linphone*.dmg
+      - build/OUTPUT/*
+    when: always
     expire_in: 1 week
 
 #################################################
