- Download configuration file if it is a webfile - Download the configuration file directly to the config path and overwrite old file - Add an interface to config directory path - Prevent a crash from the deletion of the Handler where we are still using it - Add synchronous mechanism to download file and Instance Manager deletion - Add Command parser features : clean specific keys, parse from list of arguments - Reorder config search to avoid unwanted config file overwrite - Move CLI execution at the end of initialization - Based openAppAfterInit on Manager and not on Handler - Add Call feature to Command line (--call=<SipAddress>) - Launch a call on request - Add generic parameters on show and call method to CLI - Replace connectOnce function that didn't fully work by a connection on context where it is manage by Qt - Remove redundant parser initializations - Update SDK to fix configuration updates and FEC

--- a/.gitlab-ci-files/job-macosx-desktop.yml
+++ b/.gitlab-ci-files/job-macosx-desktop.yml
@@ -97,6 +97,7 @@ job-macosx-makefile-package:
     - codesign --options runtime,library --verbose -s "$MACOS_SIGNING_IDENTITY" OUTPUT/Packages/Linphone*.dmg
     - ./../tools/app_notarization.sh
   artifacts:
+    when: always
     paths:
       - build/OUTPUT/*
     when: always
