--- a/linphone-app/cmake_builder/linphone_package/windows/uninstall.nsi.in
+++ b/linphone-app/cmake_builder/linphone_package/windows/uninstall.nsi.in
@@ -17,6 +17,7 @@ DeleteRegKey HKCR "@APPLICATION_NAME@.sip"
 DeleteRegKey HKCR "@APPLICATION_NAME@.sip-linphone"
 DeleteRegKey HKCR "@APPLICATION_NAME@.sips"
 DeleteRegKey HKCR "@APPLICATION_NAME@.sips-linphone"
+DeleteRegKey HKCR "@APPLICATION_NAME@.linphone-config"
 DeleteRegKey HKCR "@APPLICATION_NAME@.tel"
 DeleteRegKey HKCR "@APPLICATION_NAME@.callto"
 
