--- a/linphone-app/cmake_builder/linphone_package/macos/Info.plist.in
+++ b/linphone-app/cmake_builder/linphone_package/macos/Info.plist.in
@@ -45,6 +45,7 @@
 				<string>sips-linphone</string>
 				<string>tel</string>
 				<string>callto</string>
+				<string>linphone-config</string>
 			</array>
 		</dict>
 	</array>
