Fix error links like liblinphone++.so.10, complete rpath to use build folder at last * Allow `--target install` to do build/install * Generic program installation and simplify "only target" * Update CI to call explicitly install step * Rewrite install target name * Add manually libsoci_sqlite3 in appimage as it cannot be done from binaries- build rework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,7 +132,10 @@ if(CMAKE_VERBOSE_MAKEFILE)
 		list(APPEND PROJECT_BUILD_COMMAND "--verbose")
 	endif()
 endif()
-
+if(UNIX AND NOT APPLE)
+	set(CMAKE_INSTALL_RPATH "$ORIGIN:$ORIGIN/lib64:$ORIGIN/../lib64:$ORIGIN/lib:$ORIGIN/../lib:${LINPHONE_OUTPUT_DIR}/${CMAKE_INSTALL_LIBDIR}")
+	list(APPEND APP_OPTIONS "-DCMAKE_INSTALL_RPATH=${CMAKE_INSTALL_RPATH}")
+endif()
 ExternalProject_Add(sdk PREFIX "${CMAKE_BINARY_DIR}/sdk"
     SOURCE_DIR "${CMAKE_SOURCE_DIR}/linphone-sdk"
     INSTALL_DIR "${LINPHONE_OUTPUT_DIR}"
@@ -171,17 +174,18 @@ find_package(ortp CONFIG QUIET)
 
 
 if(NOT (LinphoneCxx_FOUND) OR NOT (Linphone_FOUND) OR NOT (bctoolbox_FOUND) OR NOT (belcard_FOUND) OR NOT (Mediastreamer2_FOUND) OR NOT (ortp_FOUND) OR FORCE_APP_EXTERNAL_PROJECTS)
-	message("Projects are set as External projects. You can start building them by using for example : cmake --build . --target all")
-	ExternalProject_Add(linphone-qt PREFIX "${CMAKE_BINARY_DIR}/linphoneqt"
-	    SOURCE_DIR "${CMAKE_SOURCE_DIR}/linphone-app"
-	    INSTALL_DIR "${APPLICATION_OUTPUT_DIR}"
-	    DEPENDS ${APP_DEPENDS}
-	    BUILD_COMMAND ${CMAKE_COMMAND} --build <BINARY_DIR> --config $<CONFIG> ${PROJECT_BUILD_COMMAND}
-#	    INSTALL_COMMAND ${CMAKE_COMMAND} -E echo "Install step is already done at build time."
-	    LIST_SEPARATOR | # Use the alternate list separator
-	    CMAKE_ARGS ${APP_OPTIONS} ${USER_ARGS} -DCMAKE_INSTALL_PREFIX:PATH=<INSTALL_DIR> -DCMAKE_PREFIX_PATH=${PREFIX_PATH}
+	message("Projects are set as External projects. You can start building them by using for example : cmake --build . --target install")
+	ExternalProject_Add(linphone-qt PREFIX "${CMAKE_BINARY_DIR}/linphone-app"
+		SOURCE_DIR "${CMAKE_SOURCE_DIR}/linphone-app"
+		INSTALL_DIR "${APPLICATION_OUTPUT_DIR}"
+		BINARY_DIR "${CMAKE_BINARY_DIR}/linphone-app"
+		DEPENDS ${APP_DEPENDS}
+		BUILD_COMMAND ${CMAKE_COMMAND} --build <BINARY_DIR> --config $<CONFIG> ${PROJECT_BUILD_COMMAND}
+		INSTALL_COMMAND ${CMAKE_COMMAND} -E echo "Install step will not be done by external project"
+		LIST_SEPARATOR | # Use the alternate list separator
+		CMAKE_ARGS ${APP_OPTIONS} ${USER_ARGS} -DCMAKE_INSTALL_PREFIX:PATH=<INSTALL_DIR> -DCMAKE_PREFIX_PATH=${PREFIX_PATH}
 	# ${APP_OPTIONS}
-	    BUILD_ALWAYS ON
+		BUILD_ALWAYS ON
 	)
 	install(CODE "message(STATUS Running install)")
 	set(AUTO_REGENERATION auto_regeneration)
@@ -194,9 +198,10 @@ else()
 	add_subdirectory(${CMAKE_SOURCE_DIR}/linphone-app)
 	add_dependencies(app-library ${APP_DEPENDS})
 endif()
-ExternalProject_Add(linphone-qt-only PREFIX "${CMAKE_BINARY_DIR}/linphoneqt"
+ExternalProject_Add(linphone-qt-only PREFIX "${CMAKE_BINARY_DIR}/linphone-app"
     SOURCE_DIR "${CMAKE_SOURCE_DIR}/linphone-app"
     INSTALL_DIR "${APPLICATION_OUTPUT_DIR}"
+    BINARY_DIR "${CMAKE_BINARY_DIR}/linphone-app"
     BUILD_COMMAND ${CMAKE_COMMAND} --build <BINARY_DIR> --config $<CONFIG> ${PROJECT_BUILD_COMMAND}
 #    INSTALL_COMMAND ${CMAKE_COMMAND} -E echo "Install step is already done at build time."
     LIST_SEPARATOR | # Use the alternate list separator
